# Embedded-linux

./: .gitignore  Capslock.c  PAT  PAT.pub  check_bashrc.sh  link_vedio  main.c  process1.c  what_happens_explain
7_segment_rpi/: CMakeLists.txt
7_segment_rpi/inc/: .IOStream.hpp.swp  IOStream.hpp  IStream.hpp  OStream.hpp  SevenSegment.hpp  stream.hpp
7_segment_rpi/src/: IOStream.cpp  IStream.cpp  OStream.cpp  SevenSegment.cpp  a.out  gpio_27.cpp  main.cpp
SystemD_Task/: GIF.md  README.md
kernel/: READE.md
lab7_initram/: README.md
lab8_dual/: README.md
myDirectory/: mytask.sh
nfs_lab/: README.md
sheard_memory/: process1  process2.c
shered_memory/: process1.c  process2
task10/: a.out  main.cpp
task12_temperature_sensor/: a.out  main.cpp
task12_temperature_sensor/INC/: DHT22_Sensor.hpp  Display.hpp  Logger.hpp  Temperature_Data.hpp
task12_temperature_sensor/SRC/: DHT22_Sensor.cpp  Display.cpp  Logger.cpp  Temperature_Data.cpp
task15_rpi_VSomeIP/: CMakeLists.txt  client.cpp  server.cpp  vsomeip.json
task17_uboot/: lab2.md
task5/: a.out  my_ptintf.c
task_7/: tcp_client.py  tcp_server.py
tasks1234/: capslock_led  commands.list  echo__PS1  hardlink_falier  lab1  mytask.sh
testgpio27/: blink  gpio_27.cpp  gpio_27.h  main.cpp
thread_task13/: a.out  log1.txt  main.cpp
